# api-laravel/Modules/Hardware/app/Providers/RouteServiceProvider.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace Modules\Hardware\Providers;
+
+use Illuminate\Foundation\Support\Providers\RouteServiceProvider as ServiceProvider;
+use Illuminate\Support\Facades\Route;
+
+class RouteServiceProvider extends ServiceProvider
+{
+    protected string $name = 'Hardware';
+
+    public function map(): void
+    {
+        Route::middleware('api')
+            ->prefix('api')
+            ->name('api.')
+            ->group(module_path($this->name, '/routes/api.php'));
+    }
+}
